service collections for the proxy TCP services.
* Changed application.setProxies to create a reference on the proxy manager
(director) for the proxy service collection.
* Fixed some imports in schedulers.
* Updated plans for fixing up schedulers.
* Updated plans for examining a general Twisted service load-balancing API.
* Set up commit script to work with the new branch.

2008.06.23 oubiwann

* Renamed loaders to proxy.
* Moved main.* code into manager.
* Renamed proxy.Director to manager.ProxyManager.
* Deleted main.py.
* Removed completed tasks from TODO.
* Cleaned up the error message that gets dumped into the admin UI when there's
a problem with a host.
* Updated a docstring.
* Updated README.
* Readjusted the version number to the proper next increment (it had skipped
ahead by a minor versio number).
* Updated Anthony's copyright coverage in license (was missing a couple years).
* Added copyright information for Apple's contributions.
* Updated TODO with some questions.
* Added a scenarios doc for exploring development paths.
* Really remove main.py.
* Put conf and compare in their own module.
* Moved splitHostPort function into utilities.
* Added a scheuler to the TODO.
* Started populating scenarios.txt.
* Added more notes to the scheduler idea in TODO.
* Cleaned up docstrings in schedulers.py.
* Added missing text to scenarios.txt.
* Added an application module and moved most of the .tac file contents there.
* Provided an explicit means of setting up twisted services in txlb.application
so that if people aren't using a .tac file, they don't have to mangle
txLoadBalancer code, they just need to import the setup functions in their
scripts.
* Added names to the services.
* Moved the control socket creation out of manager and into application.
* Renamed proxy.Listener to proxy.Proxy.
* Cleaned up raises in config.
* Fixed setupControlSocket to use UNIX client, not TCP client.
* Moved proxy listening out of proxy and into txlb.application.