@@ -1,7 +1,7 @@
 import resource
 
-from txlb.application import setup
+from txlb.application import services
 
 configFile = './etc/config.xml'
 resource.setrlimit(resource.RLIMIT_NOFILE, (1024, 1024))
-application = setup(configFile)
+application = services.setup(configFile)
